* libgcc2.c (fixunsdfdi, fixunssfdi): Rewrite, avoiding `long long'         arithmetic.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@57563 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-26  Torbjorn Granlund  <tege@swox.com>
+
+	* libgcc2.c (fixunsdfdi, fixunssfdi): Rewrite, avoiding `long long'
+	arithmetic.
+
 2002-09-25  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.c (input_suffix_matches, switch_matches,
