* varasm.c (force_data_section): Remove. 	(assemble_constant_align): Likewise. 	* output.h: Remove corresponding prototypes.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@57573 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-26  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* varasm.c (force_data_section): Remove.
+	(assemble_constant_align): Likewise.
+	* output.h: Remove corresponding prototypes.
+
 2002-09-26  Roger Sayle  <roger@eyesopen.com>
 
 	* stmt.c (expand_exit_loop_if_false): Expand a simple conditional
