* openbsd.h: Fix typo in last change.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@57631 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* openbsd.h: Fix typo in last change.
+
 2002-09-26  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* varasm.c (force_data_section): Remove.
