--- a/libmudflap/ChangeLog
+++ b/libmudflap/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-30  Frank Ch. Eigler  <fche@redhat.com>
+
+	* test/pass21-frag.c, pass22-frag.c: New tests: alloca, bitfields.
+	* Makefile.am, Makefile.in: Run new tests.
+	* mf-hooks.c (alloca): Correct stack direction logic.
+
 2002-09-26  Frank Ch. Eigler  <fche@redhat.com>
 
 	* mf-impl.h (adapt_cache): New option.
