2002-10-02  Nathanael Nerode  <neroden@gcc.gnu.org>
	* config.gcc: Remove support for vax-*-vms*.
	* config/vax/vms.h: Remove.
	* config/vax/xm-vms.h: Remove.
	* config/vax/vax-protos.h: Remove VMS-specific code.
	* config/vax/vax.c: Remove VMS-specific code.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@57756 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-10-02  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* config.gcc: Remove support for vax-*-vms*.
+	* config/vax/vms.h: Remove.
+	* config/vax/xm-vms.h: Remove.
+	* config/vax/vax-protos.h: Remove VMS-specific code.
+	* config/vax/vax.c: Remove VMS-specific code.
+
 2002-10-01  Andreas Bauer  <baueran@in.tum.de>
 
 	* calls.c (expand_call): Remove the `no indirect check'
