2002-10-01  Mark Mitchell  <mark@codesourcery.com>
	* decl.c (cp_finish_decl): Make sure array types are laid out,
	even if the array bounds are unknown.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/mips-3_4-rewrite-branch@57818 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-01  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (cp_finish_decl): Make sure array types are laid out,
+	even if the array bounds are unknown.
+
 2002-09-30  Steve Ellcey  <sje@cup.hp.com>
 
 	* class.c (build_vtbl_initializer): Add cast.
