* gcc.c (process_command): Set .validated for -pipe.  Correct 	grammar in comment.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@57826 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-04  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.c (process_command): Set .validated for -pipe.  Correct
+	grammar in comment.
+
 2002-10-03  Andreas Bauer  <baueran@in.tum.de>
 
 	* doc/tm.texi (FUNCTION_OK_FOR_SIBCALL): Remove.
