--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-04  Geoffrey Keating  <geoffk@apple.com>
+
+	* g++spec.c (lang_specific_driver): Don't include standard
+	libraries in `added'.
+
 2002-08-27  Geoffrey Keating  <geoffk@redhat.com>
 
 	* decl2.c (finish_file): Call c_common_write_pch.
