* calls.c (expand_call): Fix function-is-volatile check.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@57873 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-06  Andreas Bauer  <baueran@in.tum.de>
+
+	* calls.c (expand_call): Fix function-is-volatile check.
+
 Sat Oct  5 22:48:06 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* athlon.md: rewrite to DFA.
